--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -3,11 +3,13 @@
 
   <div class="stepper">
     <H1>The Contributers</H1>
-    <div class="button primary">
-      <a href="/users/new">
+   <div class="NewButton">
+
+   <a href="/users/new">
         New Contributer
       </a>
-    </div>
+
+   </div>
 
   </div>
 <div class="wrapper">
