--- a/views/influencer/new.hbs
+++ b/views/influencer/new.hbs
@@ -1,21 +1,12 @@
-<div class="stepper">
-  <a href="/users">Home</a> 
-  <div>
-  <a href="/users/{{userId}}">Profile</a>
-  </div>
-  <div>
-  <a href="/users/{{userId}}/influencer">Back</a> 
-</div>
-</div>
 
 <div class="card">
 
-  <h2>Add A New Influencer:</h2>
   <div>
+  <h2>Add A New Influencer:</h2>
     
     <form action="/users/{{userId}}/influencer" method="POST">
       <div class="form-input">
-        <label for="name">Influencer Name:</label>
+        <label for="name">Name: </label>
         <input type="text" name="name" required>
       </div>
 
@@ -36,7 +27,10 @@
 
       <div class="button-container flex-end">
         <input class="button primary" type="submit" value="Create Influencer">
-        <a href="/users/{{userId}}" class="button warning">Cancel</a>
+        <button class="buttonwarning ">
+        <a href="/users/{{userId}}" >Cancel</a>
+
+        </button>
       </div>
     </form>
   </div>
