removing white spaces

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,16 +1,11 @@
 <body class="indexPagePic">
-
-
   <div class="stepper">
-    <H1>The Contributers</H1>
+    <H1>The Contributors</H1>
    <div class="NewButton">
-
    <a href="/users/new">
-        New Contributer
+        New Contributor
       </a>
-
    </div>
-
   </div>
 <div class="wrapper">
   <div class="card">
@@ -28,7 +23,7 @@
             {{this.firstName}} {{this.lastName}}
             <div class="contact">
               <p>
-                <button>View Pofile</button>
+                <button>View Profile</button>
               </p>
             </div>
           </div>
@@ -36,7 +31,5 @@
         <hr> {{/each}}
       </div>
     </div>
-
-    
     </div>
 </body>
