--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -55,7 +55,7 @@
       </div>
 
       <div class="form-input">
-        <label for="motto">Whats you fashion motto?: </label>
+        <label for="motto">Whats your fashion motto?: </label>
         <br>
         <input type="text" name="motto"  placeholder="Enter here.."required/>
       </div>
