--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -29,13 +29,13 @@
           <strong>{{user.motto}}</strong>
         </div>
         <div class="button primary">
-       <a href="/users/{{user._id}}/edit">Edit Me</a>
+       <a href="/users/{{user._id}}/edit">Edit</a>
         </div>
         <div class="button warning">
-          <a href="/users/{{user._id}}/delete">Delete ME</a>
+          <a href="/users/{{user._id}}/delete">Delete</a>
         </div>
         <div class="visit-store">
-          <a href="/users/{{user._id}}/influencer">Influenced By List</a>
+          <a href="/users/{{user._id}}/influencer">Influenced By</a>
         </div>
       </div>
     </div>
