--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{Title}}</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+
+<head>
+  <title>{{Title}}</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
 <header>
   <ul>
 
-  <li><a class="nav-link" href="/users">Contributors</a></li>
-  
-</ul>
+    <li>
+      <a class="nav-link" href="/users">Contributors</a>
+    </li>
+
+  </ul>
 </header>
 <div class="hero-image">
   <div class="hero-text">
@@ -19,15 +24,17 @@
   </div>
 </div>
 
-  
-  <body>
 
-  
+<body>
 
-    {{{body}}}
 
-    
-  </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-   <!--Bootstrap 4-->
+
+  {{{body}}}
+
+
+</body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<!--Bootstrap 4-->
+
 </html>
