--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,12 +1,9 @@
-<body>
-
 </div>
-  <h2>User Info</h2>
 <div class="card">
-
   <div>
     <form action="/users" method="POST">
       <div class="form-input">
+        <h2>Create Contributor</h2>
         <label for="username">Username:</label>
         <br>
         <input type="text" placeholder="Enter here.." name="username" required/>
@@ -18,25 +15,25 @@
         <input type="text" name="firstName" placeholder="Enter here.." required/>
       </div>
 
-       <div class="form-input">
-        <label for="lastName">Last Name: </label >
+      <div class="form-input">
+        <label for="lastName">Last Name: </label>
         <br>
         <input type="text" name="lastName" placeholder="Enter here.." required/>
       </div>
 
-       <div class="form-input">
+      <div class="form-input">
         <label for="Userinstagram">Instagram name: </label>
         <br>
-        <input type="text" name="Userinstagram" placeholder="Enter here.."required />
+        <input type="text" name="Userinstagram" placeholder="Enter here.." required />
       </div>
 
-       <div class="form-input">
+      <div class="form-input">
         <label for="twitter">Twiiter Name: </label>
         <br>
-        <input type="text" name="twitter" placeholder="Enter here.."required />
+        <input type="text" name="twitter" placeholder="Enter here.." required />
       </div>
 
-       <div class="form-input">
+      <div class="form-input">
         <label for="location">City: </label>
         <br>
         <input type="text" name="location" placeholder="Enter here.." required/>
@@ -45,31 +42,28 @@
       <div class="form-input">
         <label for="photoUrl">Photo: </label>
         <br>
-        <input type="text" name="photoUrl" placeholder="copy a jpg link here"required/>
+        <input type="text" name="photoUrl" value="https://picsum.photos/200/300" required/>
       </div>
 
       <div class="form-input">
         <label for="description">What is fashion?: </label>
         <br>
-        <input type="text" name="description"  placeholder="Enter here.."required/>
+        <input type="text" name="description" placeholder="Enter here.." required/>
       </div>
 
       <div class="form-input">
         <label for="motto">Whats your fashion motto?: </label>
         <br>
-        <input type="text" name="motto"  placeholder="Enter here.."required/>
+        <input type="text" name="motto" placeholder="Enter here.." required/>
       </div>
-<br>
+      <br>
       <div class="button-container flex-end">
         <input class="button primary" type="submit" value="Create User">
         <button class="buttonwarning">
-        <a href="/users" class="button warning">Cancel</a>
+          <a href="/users" class="button warning">Cancel</a>
 
         </button>
       </div>
     </form>
   </div>
 </div>
-
-
-</body>
