refactoring for mobile devices

--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,12 +1,11 @@
-<body class="indexPagePic">
-  <div class="stepper">
-    <H1>The Contributors</H1>
-   <div class="NewButton">
-   <a href="/users/new">
-        New Contributor
-      </a>
-   </div>
-  </div>
+<div class="stepper">
+  <H1>Contributors</H1>
+  <a href="/users/new">
+      <span>
+        <i class="fas fa-plus"></i>
+      </span>
+    </a>
+</div>
 <div class="wrapper">
   <div class="card">
     <div class="profile-card-container">
@@ -31,5 +30,4 @@
         <hr> {{/each}}
       </div>
     </div>
-    </div>
-</body>
+  </div>
