--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,23 +4,14 @@
 <head>
   <title>{{Title}}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
-<header>
-  <ul>
 
-    <li>
-      <a class="nav-link" href="/users">Contributors</a>
-    </li>
-
-  </ul>
-</header>
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:50px">Denim City</h1>
+    <h1 style="font-size:15rem" >Denim City</h1>
   </div>
 </div>
 
