--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -11,7 +11,8 @@
         <a href="/users/{{user._id}}/delete">Delete</a>
       </div>
       <div class="functions">
-        <a href="/users/{{user._id}}/influencer">Muse</a>
+        <a href="/users/{{user._id}}/influencer">
+        <div>View Muse</div></a>
       </div>
 
     </div>
