--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,9 @@ ul {
   background-color: #333;
   justify-content: center;
 }
+a {
+  text-decoration: none;
+}
 
 li {
   float: left;
@@ -251,3 +254,10 @@ span {
   font-size: 37px;
 }
 
+.influencerWrapper{
+  display:flex;
+  flex-direction: row;
+  align-content: center;
+flex-wrap: wrap;
+justify-content: center;
+}
