--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -12,7 +12,7 @@
       </div>
       <div class="functions">
         <a href="/users/{{user._id}}/influencer">
-        <div>View Muse</div></a>
+        <div>View More</div></a>
       </div>
 
     </div>
