--- a/views/influencer/index.hbs
+++ b/views/influencer/index.hbs
@@ -1,6 +1,6 @@
  <div>
- <a href="/users/{{userId}}">
-<button>Back</button>
+ <a href="/users/{{user._id}}/">
+<button class="backBtn">Back</button>
   </a>
 </div>
 
@@ -14,7 +14,7 @@
   </div>
   
       <a href="/users/{{user._id}}/influencer/new">
-        <button>Add Influencer</button>
+        <button class="createNewBtn">Add Influencer</button>
       </a>
   <div class="influencerWrapper">
   
