--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -72,9 +72,9 @@
         <br>
         <div class="button-container flex-end">
           <input class="button primary" type="submit" value="Update Profile">
-          <button class="buttonwarning">
-            <a href="/users/{{user._id}}">Cancel</a>
-          </button>
+            <a href="/users/{{user._id}}">
+          <button class="buttonwarning">Cancel</button>
+            </a>
         </div>
       </form>
     </div>
