--- a/views/influencer/new.hbs
+++ b/views/influencer/new.hbs
@@ -2,7 +2,7 @@
 <div >
 
   <div>
-  <h2>Create New Influencer:</h2>
+  <h2 class="createNewInfluencer">Create New Influencer:</h2>
     
     <form action="/users/{{userId}}/influencer" method="POST">
       <div class="form-input">
@@ -26,8 +26,8 @@
       </div>
 
       <div >
-        <input type="submit" value="Create Influencer">
-        <button >
+        <input  class="button primary" type="submit" value="Create Influencer">
+        <button class="buttonwarning">
         <a href="/users/{{userId}}" >Cancel</a>
 
         </button>
