--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{Title}}</title>
+  <title>Denim Ciy</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
