--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,3 +1,10 @@
+<div>
+ <a href="/users/{{userId}}">
+<button class="backBtn">Back</button>
+  </a>
+</div>
+
+
 <div class="UserOptionContainer">
   <h1>Meet: {{user.firstName}} {{user.lastName}}</h1>
   <div>
@@ -7,9 +14,9 @@
       <div class="functions">
         <a href="/users/{{user._id}}/edit">Edit</a>
       </div>
-      <div class="functions">
+      <button  onclick="myFunction()" class="functions">
         <a href="/users/{{user._id}}/delete">Delete</a>
-      </div>
+      </button>
       <div class="functions">
         <a href="/users/{{user._id}}/influencer">
         <div>View More</div></a>
@@ -51,3 +58,11 @@
       </div>
   </div>
 </div>
+
+
+
+<script>
+function myFunction() {
+    confirm("Are you sure you want to Delete?");
+}
+</script>
