--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -22,7 +22,7 @@
             {{this.firstName}} {{this.lastName}}
             <div class="contact">
               <p>
-                <button>View Profile</button>
+                <button class="viewProfBtn">View Profile</button>
               </p>
             </div>
           </div>
