--- a/views/influencer/index.hbs
+++ b/views/influencer/index.hbs
@@ -14,7 +14,7 @@
   </div>
   
       <a href="/users/{{user._id}}/influencer/new">
-        <button class="createNewBtn">Add Influencer</button>
+        <button class="createNewBtn">Create</button>
       </a>
   <div class="influencerWrapper">
   
