minor modifications from merge branch

--- a/views/influencer/new.hbs
+++ b/views/influencer/new.hbs
@@ -11,20 +11,20 @@
       </div>
 
       <div class="form-input">
-        <label for="instragram">Instagram:</label>
+        <label for="instragram">Insta:</label>
         <input type="text" name="instagram">
       </div>
 
       <div class="form-input">
-        <label for="location">Location:</label>
+        <label for="location">Locat:</label>
         <input type="text" name="location">
       </div>
 
       <div class="form-input">
-        <label for="photoUrl">PhotoUrl:</label>
+        <label for="photoUrl">Photo:</label>
         <input type="text" value="https://18429-presscdn-0-68-pagely.netdna-ssl.com/wp-content/uploads/2016/07/medium-default-avatar.png" name="photoUrl">
       </div>
-
+<br>
       <div >
         <input  class="button primary" type="submit" value="Create Influencer">
         <button class="buttonwarning">
