--- a/views/influencer/new.hbs
+++ b/views/influencer/new.hbs
@@ -26,7 +26,7 @@
       </div>
 <br>
       <div >
-        <input  class="button primary" type="submit" value="Create Influencer">
+        <input  class="button primary" type="submit" value="Submit">
         <button class="buttonwarning">
         <a href="/users/{{userId}}" >Cancel</a>
 
