--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -58,7 +58,7 @@
       </div>
       <br>
       <div class="button-container flex-end">
-        <input class="button primary" type="submit" value="Create User">
+        <input class="button primary" type="submit" value="Submit">
         <button class="buttonwarning">
           <a href="/users" class="button warning">Cancel</a>
 
